MakeCatalog: new --surfacebrightness column
The surface brightness of a labeled region (in units of magnitude/arcsec^2)
is sometimes necessary but until now, we needed to do the conversion
manually using the brightness and area columns. So with this commit, a new
'--surfacebrightness' column is added that will do the job internally.

Also, I noticed a mistake in the recently added columns '--halfmaxsb' and
'--halfsumsb' (for the surface brightness at half the maximum, and the
surface brightness at half the total sum). I was mistakenly simply dividing
the magnitude by the area (in arcsec^2)! So with this commit, this issue is
also fixed.

Finally, to clarify the definition of surface brightness (in particular for
the description of the surface brightness related columns), a description
of surface brightness was added just after the definition of magnitude in
the book.

This issue was fixed with the help of Ignacio Trujillo.

--- a/NEWS
+++ b/NEWS
@@ -44,10 +44,11 @@ See the end of the file for license conditions.
   MakeCatalog:
    --maximum: maximum value of labeled regions pixels (clump/object).
    --areaarcsec2: area of labeled region (clump/object) in arcsec^2.
+   --surfacebrightness: the surface brightness of the labeled region.
    --fwhmobs: observed FWHM in pixels, along the major axis.
    --halfmaxarea: number of pixels with a value larger than half the maximum.
    --halfmaxsum: sum of pixels with a value larger than half the maximum.
-   --halfmaxsb: surf. brightness within half max (--halfmaxsum/--halfmaxarea).
+   --halfmaxsb: surf. brightness within half of the maximum.
    --fracsum: fractions to use in '--fracsumarea1' or '--fracsumarea2'.
    --fracsumarea1: area of given fraction of the summed object or clump values.
    --fracsumarea2: area of given fraction of the summed object or clump values.
